--- a/social/src/main/resources/templates/greeting.html
+++ b/social/src/main/resources/templates/greeting.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<body>
-		<h2>Привет</h2>
+		<h2>Привет, user</h2>
+		<a href="/main">Maind</a>
 	</body>
 </html>
