--- a/social/src/main/resources/templates/main.html
+++ b/social/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" >
 	<head>
 		<title>Hello</title>
 	</head>
@@ -10,14 +10,14 @@
 		</form>
 		<hr>
 
-		<form method="post">
+		<form method="post" th:action="@{/main}">
 			<input type="text" name="text" placeholder="some text">
 			<input type="text" name="tag" placeholder="tag">
 			<button type="submit">Add</button>
 		</form>
 			<hr>
 			<h4>Фильтрация по тегу</h4>
-		<form method="post" action="filter">
+		<form method="post" th:action="@{/filter}">
 			<input type="text" name="filter" placeholder="tag">
 			<button type="submit">Search</button>
 		</form>
